# pico-synth_mcp

.github/workflows/: adist.yml  dist3.yml  dist_original.yml  main2.yml  release.yml  worflow_dist.yml
firmware/: CMakeLists.txt  main.c  midi-impl.c  screen-features.c  screen-features.h  screen-settings.c  synth.c
firmware/features/: CMakeLists.txt  MakeLists.txt  feature_midi_monitor.c  feature_midi_monitor.h  features-config.h  features.c  features.h
firmware/tui/: driver-ec11.c  screen.c
firmware/tui/include/pico-synth/: tui.h
